# sunspot

./: CMakeLists.txt  README
src/: CMakeLists.txt  blob.cpp  blob.hpp  detect.cpp  detect.hpp  fitstool.cpp  fitstool.hpp  group.cpp  group.hpp  mag.cpp  mag.hpp  main.cpp  utils.hpp
